# slack_bot

./: .env  .gitignore  Makefile  README.md  bot.py  main.py  models.py  pyproject.toml  requirements.txt  test.db
instance/: commands.db
tests/: test_add_command.py  test_add_commands.py  test_command.py  test_commands_all.py  test_delete.py
